[package]
name = "evfs"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2018"


[features]
# no default features, must enable the things you need
default = []
local-fs = []
zip-fs = ["zip"]

[dependencies]
crossbeam-channel = "0.4"
thiserror = "1.0"
log = "0.4"

zip = { version = "0.5.7", optional = true }

